added classID config

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "group": "",
-  "classID": "",
+  "group": "B",
+  "classID": "3306",
   "color-scheme": {
     "primary": "1",
     "cancelled": "11",
