--- a/config.json
+++ b/config.json
@@ -4,7 +4,8 @@
   "color-scheme": {
     "primary": "1",
     "cancelled": "11",
-    "changed": "5"
+    "changed": "5",
+    "exam": "10"
   },
   "weeksAhead": 5
 }
